--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,9 @@
             "email": "taylor@processmaker.com"
         }
     ],
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/processmaker/msgraph-sdk-php"
-        }
-
-    ],
     "require": {
         "league/oauth2-client": "^2.4",
-        "microsoft/microsoft-graph": "dev-bugfix/130",
+        "microsoft/microsoft-graph": "dev-master",
         "league/flysystem": "^1.0"
     },
     "autoload": {
